fix: aligned code-block-flair

--- a/src/features/_markdown-code-block.scss
+++ b/src/features/_markdown-code-block.scss
@@ -20,6 +20,7 @@ body:not(.no-codeblock-line-numbers)
 .markdown-source-view.mod-cm6 .code-block-flair {
   position: absolute;
   right: 6px;
+  top: 2px;
   z-index: 1;
   display: inline-block;
   padding: unset;
